--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,45 @@
+* {}
+
+
+
+/*BODY*/
+body {}
+
+
+
+/* HEADER */
+header {}
+
+h1 {}
+
+input {}
+
+
+
+/* MAIN */
+main {}
+
+
+
+/* EMPLOYEE DIV */
+.employee-card {}
+
+h2 {}
+
+.employee-card img {}
+
+.employee-card span {}
+
+
+
+/* MODAL DIV */
 .modal {
     display: none;
 }
+
+.modal img {}
+
+h3 {}
+
+.modal span {}
+
