--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
 /*BODY*/
 body {
+    padding-bottom: 2rem;
     margin: 0 auto;
     background-color: rgb(243, 243, 243);
     font-family: "Open Sans", sans-serif;
@@ -16,7 +17,6 @@ body {
 /* HEADER */
 header {
     padding-bottom: 1rem;
-    border-bottom: 1px solid lightgray;
     text-align: center;
 }
 
@@ -46,28 +46,54 @@ input::placeholder {
 
 
 /* MAIN */
-main {}
+main {
+    display: grid;
+    row-gap: 1rem;
+    margin-left: .5rem;
+    margin-right: .5rem;
+}
 
 span {
-    font-size: 1rem;
+    font-size: .85rem;
 }
 
 
 
 /* EMPLOYEE DIV */
 .employee-card {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-areas: 
+        "img name"
+        "img email"
+        "img city";
     background-color: white;
+    padding: 1.5rem 1rem;
+    border: 1.5px solid lightgray;
+    border-radius: 7px;
 }
 
-.employee-card img {}
+.employee-card img {
+    grid-area: img;
+    align-self: center;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
 
 h2 {
-    font-size: 1.3rem;
+    grid-area: name;
+    margin: 0;
+    font-size: 1.1rem;
 }
 
-span .employee-email {}
+span .employee-email {
+    grid-area: email;
+}
 
-span .employee-city {}
+span .employee-city {
+    grid-area: city;
+}
 
 
 /* EMPLOYEE COUNT */
@@ -142,4 +168,164 @@ span .modal-bday {}
 .mod-eleven {}
 
 .mod-twelve {}
+
+
+
+
+
+@media (min-width: 768px) {
+
+/* HEADER */
+header {
+    display: grid;
+    grid-template-columns: 2fr 1fr; 
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+h1 {
+    justify-self: start;
+    align-self: center;
+}
+
+input {
+    justify-self: end;
+    align-self: center;
+}
+
+
+
+/* MAIN */
+main {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: 
+        "one seven"
+        "two eight"
+        "three nine"
+        "four ten"
+        "five eleven"
+        "six twelve";
+    gap: 1rem 4rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
+
+
+
+/* EMPLOYEE DIV */
+.employee-card {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-areas: 
+        "img name"
+        "img email"
+        "img city";
+    background-color: white;
+    padding: 1.5rem 1rem;
+    border: 1.5px solid lightgray;
+    border-radius: 7px;
+}
+
+
+
+/* EMPLOYEE COUNT */
+.employee-one {
+    grid-area: one;
+}
+
+.employee-two {
+    grid-area: two;
+}
+
+.employee-three {
+    grid-area: three;
+}
+
+.employee-four {
+    grid-area: four;
+}
+
+.employee-five {
+    grid-area: five;
+}
+
+.employee-six {
+    grid-area: six;
+}
+
+.employee-seven {
+    grid-area: seven;
+}
+
+.employee-eight {
+    grid-area: eight;
+}
+
+.employee-nine {
+    grid-area: nine;
+}
+
+.employee-ten {
+    grid-area: ten;
+}
+
+.employee-eleven {
+    grid-area: eleven;
+}
+
+.employee-twelve {
+    grid-area: twelve;
+}
+
+
+
+/* MODAL DIV */
+.modal {}
+
+.modal img {}
+
+h3 {}
+
+span .modal-email {}
+
+span .modal-city {}
+
+span .modal-number {}
+
+span .modal-address {}
+
+span .modal-bday {}
+
+
+/* MOD COUNT */
+.mod-one {}
+
+.mod-two {}
+
+.mod-three {}
+
+.mod-four {}
+
+.mod-five {}
+
+.mod-six {}
+
+.mod-seven {}
+
+.mod-eight {}
+
+.mod-nine {}
+
+.mod-ten {}
+
+.mod-eleven {}
+
+.mod-twelve {}
+}
+
+
+
+
 
