--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,10 @@ span {
     border-radius: 7px;
 }
 
+.employee-card:hover {
+    border: 2px solid black;
+}
+
 .employee-card img {
     grid-area: img;
     align-self: center;
