--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,204 @@ span .modal-bday {}
 
 
 
+/* MEDIA QUERIES */
+@media (min-width: 400px) and (max-width: 499px) {
+/* HEADER */
+header {
+    padding-bottom: 2rem;
+}
+
+
+
+    /* MAIN */
+main {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+span {
+    font-size: 1rem;
+}
+
+
+
+/* EMPLOYEE DIV */
+.employee-card {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 2rem;
+    grid-template-areas: 
+        "img name"
+        "img email"
+        "img city";
+    background-color: white;
+    padding: 1.5rem 1rem;
+    border: 1.5px solid lightgray;
+    border-radius: 7px;
+}
+
+.employee-card img {
+    width: 100px;
+    height: 100px;
+}
+
+h2 {
+    font-size: 1.3rem;
+}
+
+}
+
+
+
+
+
+@media (min-width: 500px) and (max-width: 599px) {
+    /* HEADER */
+    header {
+        padding-bottom: 2rem;
+    }
+
+
+
+    /* MAIN */
+    main {
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+    
+    span {
+        font-size: 1.15rem;
+    }
+    
+    
+    
+    /* EMPLOYEE DIV */
+    .employee-card {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 4rem;
+        grid-template-areas: 
+            "img name"
+            "img email"
+            "img city";
+        background-color: white;
+        padding: 1.5rem 1rem;
+        border: 1.5px solid lightgray;
+        border-radius: 7px;
+    }
+    
+    .employee-card img {
+        width: 110px;
+        height: 110px;
+        justify-self: center;
+    }
+    
+    h2 {
+        font-size: 1.35rem;
+    }
+    
+    }
+
+
+
+
+
+@media (min-width: 600px) and (max-width: 699px) {
+    /* HEADER */
+    header {
+        padding-bottom: 2rem;
+    }
+ 
+ 
+ 
+    /* MAIN */
+    main {
+        margin-left: 3rem;
+        margin-right: 3rem;
+    }
+    
+    span {
+        font-size: 1.25rem;
+    }
+    
+    
+    
+    /* EMPLOYEE DIV */
+    .employee-card {
+        column-gap: 2rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+    
+    .employee-card img {
+        width: 120px;
+        height: 120px;
+        justify-self: center;
+    }
+    
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    h2, .employee-email, .employee-city {
+        padding-left: 2rem;
+        align-self: center;
+    }
+    
+    }
+
+
+
+
+
+@media (min-width: 700px) and (max-width: 767px) {
+    /* HEADER */
+    header {
+        padding-bottom: 2rem;
+    }
+
+
+
+    /* MAIN */
+    main {
+        margin-left: 4rem;
+        margin-right: 4rem;
+    }
+
+    span {
+        font-size: 1.25rem;
+    }
+    
+    
+    
+    /* EMPLOYEE DIV */
+    .employee-card {
+        column-gap: 2rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+    
+    .employee-card img {
+        width: 125px;
+        height: 125px;
+        justify-self: center;
+    }
+    
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    h2, .employee-email, .employee-city {
+        padding-left: 2rem;
+        align-self: center;
+    }
+    
+    }
+
+
+
+
+
 @media (min-width: 768px) {
 
 /* HEADER */
@@ -210,7 +408,7 @@ main {
         "four ten"
         "five eleven"
         "six twelve";
-    gap: 1rem 4rem;
+    gap: 2rem 4rem;
     margin-left: 2rem;
     margin-right: 2rem;
 }
@@ -333,3 +531,235 @@ span .modal-bday {}
 
 
 
+@media (min-width: 900px) {
+    /* MAIN */
+    span {
+        font-size: 1rem;
+    }
+
+
+
+    /* EMPLOYEE DIV */
+    .employee-card {
+        column-gap: 2rem;
+    }
+    
+    .employee-card img {
+        width: 100px;
+        height: 100px;
+        justify-self: center;
+    }
+
+    h2, .employee-email, .employee-city {
+        padding-left: 2rem;
+        align-self: center;
+    }
+}
+
+
+
+
+
+@media (min-width: 1100px) {
+    /* HEADER */
+    header {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+    }
+
+
+
+    /* EMPLOYEE DIV */
+    .employee-card {
+        padding-left: 2rem;
+        padding-right: 2rem;
+        column-gap: 2rem;
+    }
+
+}
+
+
+
+
+
+@media (min-width: 1400px) {
+/* HEADER */
+header {
+    display: grid;
+    grid-template-columns: 2fr 1fr; 
+    padding: 2rem 3rem;
+    margin-bottom: .25rem;
+}
+
+h1 {
+    font-size: 1.5rem;
+}
+
+input {
+    width: 250px;
+    height: 2.5rem;
+    font-size: 1rem;
+}
+
+input::placeholder {
+    font-size: 1rem;
+}
+    
+
+
+/* MAIN */
+main {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: 
+        "one five nine"
+        "two six ten"
+        "three seven eleven"
+        "four eight twelve";
+    gap: 2rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
+
+span {
+    font-size: 1rem;
+}
+
+
+/* EMPLOYEE DIV */
+.employee-card {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 1.25rem;
+    grid-template-areas: 
+        "img name"
+        "img email"
+        "img city";
+    background-color: white;
+    padding: 2rem 1rem;
+    border: 2px solid lightgray;
+    border-radius: 10px;
+}
+
+.employee-card img {
+    grid-area: img;
+    align-self: center;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin-left: 1rem;
+}
+
+h2, .employee-email, .employee-city {
+    padding-left: 1rem;
+}
+
+h2 {
+    font-size: 1.25rem;
+    align-self: end;
+}
+
+.employee-email {
+    align-self: center;
+}
+
+.employee-city {
+    align-self: start;
+}
+
+
+
+/* EMPLOYEE COUNT */
+.employee-one {
+    grid-area: one;
+}
+
+.employee-two {
+    grid-area: two;
+}
+
+.employee-three {
+    grid-area: three;
+}
+
+.employee-four {
+    grid-area: four;
+}
+
+.employee-five {
+    grid-area: five;
+}
+
+.employee-six {
+    grid-area: six;
+}
+
+.employee-seven {
+    grid-area: seven;
+}
+
+.employee-eight {
+    grid-area: eight;
+}
+
+.employee-nine {
+    grid-area: nine;
+}
+
+.employee-ten {
+    grid-area: ten;
+}
+
+.employee-eleven {
+    grid-area: eleven;
+}
+
+.employee-twelve {
+    grid-area: twelve;
+}
+
+
+
+/* MODAL DIV */
+.modal {}
+
+.modal img {}
+
+h3 {}
+
+span .modal-email {}
+
+span .modal-city {}
+
+span .modal-number {}
+
+span .modal-address {}
+
+span .modal-bday {}
+
+
+/* MOD COUNT */
+.mod-one {}
+
+.mod-two {}
+
+.mod-three {}
+
+.mod-four {}
+
+.mod-five {}
+
+.mod-six {}
+
+.mod-seven {}
+
+.mod-eight {}
+
+.mod-nine {}
+
+.mod-ten {}
+
+.mod-eleven {}
+
+.mod-twelve {}
+}
