--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,8 @@ span .employee-city {
     background-color: white;
 }
 
+.modal button {}
+
 .modal img {}
 
 h3 {}
@@ -428,6 +430,8 @@ span .modal-bday {}
     /* MODAL DIV */
     .modal {}
 
+    .modal button {}
+
     .modal img {}
 
     h3 {}
@@ -601,6 +605,8 @@ span .modal-bday {}
 
     /* MODAL DIV */
     .modal {}
+
+    .modal button {}
 
     .modal img {}
 
