--- a/styles.css
+++ b/styles.css
@@ -104,25 +104,50 @@ span .employee-city {
 
 /* MODAL DIV */
 .modal {
+    position: fixed;
+    top: 20%;
+    left: 10%;
+    right: 10%;
+    z-index: 1;
     display: none;
+    grid-template-columns: 1fr;
+    row-gap: 1rem;
+    justify-items: center;
+    padding-bottom: 3rem;
     background-color: white;
 }
 
-.modal button {}
+.modal span {
+    font-size: .9rem;
+}
 
-.modal img {}
+#button-one, #button-two, #button-three, #button-four, #button-five, #button-six, #button-seven, #button-eight, #button-nine, #button-ten, #button-eleven, #button-twelve {
+    justify-self: end;
+    padding: 1rem 1rem 0;
+    border: none;
+    background-color: white;
+    font-size: 1rem;
+}
 
-h3 {}
+.modal img {
+    border-radius: 50%;
+    margin-top: 0rem;
+} 
 
-span .modal-email {}
+h3 {
+    margin: 0;
+}
 
-span .modal-city {}
+.modal-city {
+    width: 90%;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid lightgray;
+    text-align: center;
+}
 
-span .modal-number {}
-
-span .modal-address {}
-
-span .modal-bday {}
+.modal-number {
+    padding-top: 1rem;
+}
 
 
 
@@ -428,7 +453,12 @@ span .modal-bday {}
 
 
     /* MODAL DIV */
-    .modal {}
+    .modal {
+        height: 60%;
+        top: 20%;
+        width: 50%;
+        left: 25%;
+    }
 
     .modal button {}
 
