--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,8 @@ span .employee-city {
     row-gap: 1rem;
     justify-items: center;
     padding-bottom: 3rem;
+    border: 2px solid lightgray;
+    border-radius: 10px;
     background-color: white;
 }
 
@@ -531,6 +533,17 @@ h3 {
         padding-left: 2rem;
         align-self: center;
     }
+
+
+
+    /* MODAL DIV */
+    .modal {
+        height: 70%;
+        top: 15%;
+        width: 50%;
+        left: 25%;
+    }
+
 }
 
 
@@ -551,6 +564,16 @@ h3 {
         padding-left: 2rem;
         padding-right: 2rem;
         column-gap: 2rem;
+    }
+
+
+
+    /* MODAL DIV */
+    .modal {
+        height: 80%;
+        top: 10%;
+        width: 50%;
+        left: 25%;
     }
 
 }
@@ -634,7 +657,12 @@ h3 {
 
 
     /* MODAL DIV */
-    .modal {}
+    .modal {
+        height: 70%;
+        top: 15%;
+        width: 40%;
+        left: 30%;
+    }
 
     .modal button {}
 
