--- a/styles.css
+++ b/styles.css
@@ -47,15 +47,27 @@ input::placeholder {
 
 
 /* MAIN */
+/*
 main {
     display: grid;
     row-gap: 1rem;
     margin-left: .5rem;
     margin-right: .5rem;
 }
+*/
 
 span {
-    font-size: .85rem;
+    font-size: .8rem;
+}
+
+
+
+/* CARD */
+.card {
+    display: grid;
+    row-gap: 1rem;
+    margin-left: .5rem;
+    margin-right: .5rem;
 }
 
 
@@ -72,6 +84,7 @@ span {
     padding: 1.5rem 1rem;
     border: 1.5px solid lightgray;
     border-radius: 7px;
+    overflow-x: hidden;
 }
 
 .employee:hover {
@@ -81,15 +94,15 @@ span {
 .employee img {
     grid-area: img;
     align-self: center;
-    width: 80px;
-    height: 80px;
+    width: 65px;
+    height: 65px;
     border-radius: 50%;
 }
 
 h2 {
     grid-area: name;
     margin: 0;
-    font-size: 1.1rem;
+    font-size: .95rem;
 }
 
 span .employee-email {
@@ -178,29 +191,40 @@ h3 {
 
 
     /* MAIN */
+    /*
     main {
         margin-left: 1rem;
         margin-right: 1rem;
     }
+    */
 
     span {
-        font-size: 1rem;
+        font-size: .85rem;
+    }
+
+
+
+    /* CARD */
+    .card {
+        margin-left: 1rem;
+        margin-right: 1rem;
     }
 
 
 
     /* EMPLOYEE DIV */
     .employee {
+        grid-template-columns: 1fr 3fr;
         column-gap: 2rem;
     }
 
     .employee img {
-        width: 100px;
-        height: 100px;
+        width: 75px;
+        height: 75px;
     }
 
     h2 {
-        font-size: 1.3rem;
+        font-size: 1.1rem;
     }
 
 }
@@ -218,30 +242,41 @@ h3 {
 
 
     /* MAIN */
+    /*
     main {
         margin-left: 2rem;
         margin-right: 2rem;
     }
+    */
     
     span {
-        font-size: 1.15rem;
+        font-size: .9rem;
+    }
+
+
+
+    /* CARD */
+    .card {
+        margin-left: 2rem;
+        margin-right: 2rem;
     }
     
     
     
     /* EMPLOYEE DIV */
     .employee {
-        column-gap: 4rem;
+        grid-template-columns: 1fr 3fr;
+        column-gap: 2rem;
     }
     
     .employee img {
-        width: 110px;
-        height: 110px;
+        width: 80px;
+        height: 80px;
         justify-self: center;
     }
     
     h2 {
-        font-size: 1.35rem;
+        font-size: 1.15rem;
     }
     
 }
@@ -259,36 +294,47 @@ h3 {
  
  
     /* MAIN */
+    /*
     main {
         margin-left: 3rem;
         margin-right: 3rem;
     }
+    */
     
     span {
-        font-size: 1.25rem;
+        font-size: 1rem;
+    }
+
+
+
+    /* CARD */
+    .card {
+        margin-left: 3rem;
+        margin-right: 3rem;
     }
     
     
     
     /* EMPLOYEE DIV */
     .employee {
+        grid-template-columns: 1fr 3fr;
         column-gap: 2rem;
         padding-left: 2rem;
         padding-right: 2rem;
     }
     
     .employee img {
-        width: 120px;
-        height: 120px;
+        width: 90px;
+        height: 90px;
         justify-self: center;
     }
     
     h2 {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
     }
 
     h2, .employee-email, .employee-city {
-        padding-left: 2rem;
+        padding-left: 1rem;
         align-self: center;
     }
     
@@ -307,32 +353,43 @@ h3 {
 
 
     /* MAIN */
+    /*
     main {
         margin-left: 4rem;
         margin-right: 4rem;
     }
+    */
 
     span {
-        font-size: 1.25rem;
+        font-size: 1rem;
+    }
+
+
+
+    /* CARD */
+    .card {
+        margin-left: 4rem;
+        margin-right: 4rem;
     }
     
     
     
     /* EMPLOYEE DIV */
     .employee {
+        grid-template-columns: 1fr 3fr;
         column-gap: 2rem;
         padding-left: 2rem;
         padding-right: 2rem;
     }
     
     .employee img {
-        width: 125px;
-        height: 125px;
+        width: 95px;
+        height: 95px;
         justify-self: center;
     }
     
     h2 {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
     }
 
     h2, .employee-email, .employee-city {
@@ -368,7 +425,26 @@ h3 {
 
 
     /* MAIN */
+    /*
     main {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-areas: 
+            "one seven"
+            "two eight"
+            "three nine"
+            "four ten"
+            "five eleven"
+            "six twelve";
+        gap: 2rem 4rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+    */
+
+
+
+    /* CARD */
+    .card {
         grid-template-columns: repeat(2, 1fr);
         grid-template-areas: 
             "one seven"
@@ -452,19 +528,20 @@ h3 {
 @media (min-width: 900px) {
     /* MAIN */
     span {
-        font-size: 1rem;
+        font-size: .95rem;
     }
 
 
 
     /* EMPLOYEE DIV */
     .employee {
-        column-gap: 2rem;
+        grid-template-columns: 1fr 4fr;
+        column-gap: 0rem;
     }
     
     .employee img {
-        width: 100px;
-        height: 100px;
+        width: 80px;
+        height: 80px;
         justify-self: center;
     }
 
@@ -502,7 +579,7 @@ h3 {
     .employee {
         padding-left: 2rem;
         padding-right: 2rem;
-        column-gap: 2rem;
+        column-gap: 0rem;
     }
 
 
@@ -545,6 +622,7 @@ h3 {
 
 
     /* MAIN */
+    /*
     main {
         grid-template-columns: repeat(3, 1fr);
         grid-template-areas: 
@@ -556,6 +634,7 @@ h3 {
         margin-left: 3rem;
         margin-right: 3rem;
     }
+    */
 
     span {
         font-size: 1rem;
@@ -563,16 +642,33 @@ h3 {
 
 
 
+    /* CARD */
+    .card {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-areas: 
+            "one five nine"
+            "two six ten"
+            "three seven eleven"
+            "four eight twelve";
+        gap: 2rem;
+        margin-left: 3rem;
+        margin-right: 3rem;
+    }
+
+
+
     /* EMPLOYEE DIV */
     .employee {
-        padding: 2rem 1rem;
+        grid-template-columns: 1fr 3fr;
+        column-gap: 1rem;
+        padding: 2rem 0rem;
         border: 2px solid lightgray;
         border-radius: 10px;
     }
 
     .employee img {
-        width: 120px;
-        height: 120px;
+        width: 80px;
+        height: 80px;
         margin-left: 1rem;
     }
 
