--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,16 @@ span .employee-city {
 
 
 /* MODAL DIV */
+.container {
+    display: none;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(49, 48, 48, 0.5);
+}
+
 .modal {
     position: fixed;
     top: 20%;
